# better-teletask-server

./: .env.example  .gitignore  README.md  compose.yml  env.example
whisper/: Dockerfile  README.md  bttCli.py  checker.py  config.py  crawlnewids.py  database.py  database2.py  index.py  index2.py  indexlegacy.py  krabbler.py  krabbler2.py  krabbler3.py  krabblerlegacy.py  kratzer.py  logger.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  test.py  testffmpeg.py  translation.py  translator.py  userapp.py  utils.py  whisper.py
whisper/api/: routes.py  scheduling_routes.py  search_routes.py  subtitle_routes.py
whisper/app/: bttCli.py  discovery.py  main.py  userapp.py
whisper/app/api/: admin_routes.py  scheduling_routes.py  search_routes.py  subtitle_routes.py  worker_routes.py
whisper/app/core/: config.py  logger.py
whisper/app/db/: __init__.py  api_keys.py  blacklist.py  schema.py  (+6 more)
whisper/db/: __init__.py  api_keys.py  blacklist.py  connection.py  error_handling.py  lectures.py  migrations.py  schema.py  vtt_files.py  vtt_lines.py
whisper/logs/: aborts.txt  log.txt
whisper/models/: __init__.py  dataclasses.py
whisper/services/: downloader.py  pipeline.py  scraper.py  translation.py  vtt_processing.py  whisper_asr.py
whisper/tests/: conftest.py  test_db_api_keys.py  test_db_vtt_lines.py  test_models.py  test_queues.py  test_routes.py  test_scheduling_routes.py  test_translation.py  test_vtt_processing.py
whisper/utils/: apiCli.py
whisper/worker/: transcribe.py
whisper/workers/: queue_updaters.py  queues.py  transcribe_worker.py
(+76 files in other folders)
